syntax = "proto3";

package authorization_code;

import "client.proto";

message AuthorizationCode {
  string id = 1;
  string user_id = 2;
  string client_id = 3;
  string code = 4;
  string code_challenge = 5;
  string code_challenge_method = 6;
  string redirect_uri = 7;
  repeated string audience = 8;
  string expires_in = 9;
  string created_at = 10;
  string updated_at = 11;
  repeated string scope = 12;
  client.Client client = 13;
}

message AuthorizationCodeList {
  repeated AuthorizationCode authorization_code = 1;
}
