syntax = "proto3";

package refresh_token;

import "client.proto";

message RefreshToken {
  string id = 1;
  string authorization_code_id = 2;
  string user_id = 3;
  string client_id = 4;
  string token = 5;
  repeated string audience = 6;
  string expires_in = 7;
  string created_at = 8;
  string updated_at = 9;
  repeated string scope = 10;
  client.Client client = 11;
}

message RefreshTokenList {
  repeated RefreshToken refresh_token = 1;
}
